feat: rebuild the bot as season 2's access system